--- a/questgames/src/filter.html
+++ b/questgames/src/filter.html
@@ -1,4 +1,6 @@
-<section class="landing-filter">
+<section
+    class="landing-filter"
+    aria-controls="gamesGards">
     <h2 class="landing-filter__title">Наші квест игри</h2>
     <div class="landing-filter__games">
         <button
