--- a/questgames/src/index.html
+++ b/questgames/src/index.html
@@ -24,7 +24,7 @@
     </head>
     <body class="landing-quests">
         @@include('./header.html')
-        <main>@@include('./hero.html') @@include('./filter.html')</main>
+        <main>@@include('./hero.html') @@include('./filter.html') @@include('./gamesCards.html')</main>
 
         <footer class="landing-footer">@@include('./social.html')</footer>
         <dialog class="landing-modal">
